# MailMind.ai

./: .dockerignore  .gitattributes  Dockerfile  README.md  Readme.md  Redmi.md  baseline.py  inference.py  openenv.yaml  predict_email.py  prevalidate.py  pyproject.toml  requirements.txt  run.py  train.py
backend/: main.py
backend/api/: routes.py
backend/core/: config.py
backend/db/: sqlite.py
backend/schemas/: env.py  openenv_sdk.py
backend/services/: baseline_service.py  dataset_service.py  env_service.py  inference_engine.py  openenv_sdk_env.py
dataset/: email_triage.db  emails.csv
docker/: docker-compose.yml
graders/: email_grader.py
models/: metrics.json  registry.json
models/category/: metadata.json  model.joblib
models/department/: metadata.json  model.joblib
models/priority/: metadata.json  model.joblib
models/sentiment/: metadata.json  model.joblib
models/spam/: metadata.json  model.joblib
server/: app.py
tasks/: catalog.py
training/: constants.py  data_generator.py  modeling.py  preprocess.py
ui/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: analytics-panel.tsx  dashboard-header.tsx  decision-panel.tsx  inbox-list.tsx  reviewer-panel.tsx
ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
ui/src/lib/: utils.ts
ui/src/pages/: dashboard.tsx
ui/src/store/: useTriageStore.ts
ui/src/types/: env.ts
